# wain

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: README.md  examples.rs  parsers.rs  validation.rs
examples/: Makefile  README.md  boyer_moore.c  boyer_moore.wat  brainfxxk.c  brainfxxk.wat  fib.c  fib.wat  guessing_game.c  guessing_game.wat  mandelbrot.c  mandelbrot.wat  mt19937.c  mt19937.wat  n_queens.c  n_queens.wat  nbodies.c  nbodies.wat  pi.c  pi.wat  primes.c  primes.wat  quicksort.c  quicksort.wat  sqrt.c  sqrt.wat  y_combinator.cpp  y_combinator.wat
examples/api/: README.md  execute.rs  invoke.rs  wat.rs
examples/hello/: hello.c  hello.wat  hello_global.c  hello_global.wat  hello_indirect_call.c  hello_indirect_call.wat  hello_struct.c  hello_struct.wat
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: binary_parser.rs  text_parser.rs
scripts/: build_wasm.sh  clippy.bash
spec-test/: Cargo.toml  README.md
spec-test/src/: crash.rs  error.rs  importer.rs  main.rs  parser.rs  runner.rs  wast.rs
spec-test/src/crash-tester/: main.rs
src/: main.rs
wain-ast/: Cargo.toml  README.md
wain-ast/src/: lib.rs  source.rs
wain-exec/: Cargo.toml  README.md
wain-exec/src/: cast.rs  globals.rs  import.rs  lib.rs  memory.rs  runtime.rs  stack.rs  table.rs  trap.rs  value.rs  yield_now.rs
wain-syntax-binary/: Cargo.toml  README.md
wain-syntax-binary/src/: error.rs  leb128.rs  lib.rs  parser.rs  source.rs
wain-syntax-text/: Cargo.toml  LICENSE.txt  README.md
wain-syntax-text/src/: ast.rs  compose.rs  lexer.rs  lib.rs  parser.rs  source.rs  wat2wasm.rs
wain-validate/: Cargo.toml  README.md
wain-validate/src/: error.rs  insn.rs  lib.rs
